v1.3.6: dashboard stats, golden ratio layout, MD3 transitions, updated icons, website update